--- a/index.html
+++ b/index.html
@@ -8,10 +8,44 @@
   </head>
   <body>
     <div id="main-container">
-      <div id='container'>
+      <div class='container'>
         <img id="logo" src="./img/logo.png">
         <div id="c-soon">Coming soon...</div>
       </div>
+
+
+    </div>
+
+    <div id="second-page">
+      Model
+    </div>
+    <div id="third-page">
+
+    </div>
+    <div id="forth-page">
+
+    </div>
+    <div id="contacts">
+      <div class="container">
+        <h1>Contact me for more info!</h1>
+        <div id="links">
+            <a href="mailto:jmarts16@gmail.com">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+            </a>
+            <a href="#" target="_blank">
+              <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+        </div>
+      </div>
+    </div>
+
+    <div id="menu">
+      <span id="menu-span1"></span>
+      <span id="menu-span2"></span>
+      <span id="menu-span3"></span>
     </div>
 
     <div id="coded-with-love">
@@ -21,5 +55,7 @@
       by js
     </div>
     <script src="https://use.fontawesome.com/bff53d5f44.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
